package proto_dbproxy;

message Request
{
    enum ActoinType
    { 
        kSelect                  = 1; 
        kInsert                  = 2; 
        kUpdate                  = 3; 
        kDelete                  = 4;
    }
    
    enum DatabaseType
    {
        kRedis                   = 1;
        kMySQL                   = 2;
    }

    required uint32 identifier   = 1;
    required DatabaseType dbtype = 2;
    required ActoinType action   = 3;
    required string dbname       = 4;
    optional string statement    = 5;
}